--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,153 +18,42 @@
       <!-- 1F轮播图 --> 
       <div class="carousel">
         <div class="carousel_main">
-          <div class="carousel_item carousel_item2">
-            <h3 class="item_title item_title_caro">今日早餐推荐：家常早餐最美好</h3>
+          <div class="carousel_item carousel_item_3">
+            <h3 class="ttitles ttitles_carousel">今日午餐推荐：午餐荤素搭配，更健康</h3>
             <ul>
               <li>
-                <a href="#" title="美味蒸蛋饼" class="img"><img src="https://s1.ig.meishij.net/p/20190705/54652a7dc14d5a928549238c2368e9b1.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
-                  <h2><a href="#" title="美味蒸蛋饼">美味蒸蛋饼</a></h2>
-                  <strong>健康少油，补充维生素</strong>
-                  <span><a href="#">延年益寿</a></span>
-                </div>
-              </li>
-              <li>
-                <a href="#" title="蒜泥拌鸡蛋"  class="img"><img src="https://s1.ig.meishij.net/p/20190705/fc216b948b0f2664bb50c37bd8aebd58.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
-                  <h2><a href="#" title="蒜泥拌鸡蛋">蒜泥拌鸡蛋</a></h2>
-                  <strong>补充优质蛋白，提高记忆力</strong>
-                  <span><a href="#">健脑益智</a></span>
-                </div>
-              </li>
-              <li>
-                <a href="#" title="南瓜玉米汁"  class="img"><img src="https://s1.ig.meishij.net/p/20190705/a415bec0202ee2ee1f2db82c65fc904e.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
-                  <h2><a href="#" title="南瓜玉米汁">南瓜玉米汁</a></h2>
-                  <strong>保健效果好，多喝降三高</strong>
-                  <span><a href="#">防癌</a></span>
-                </div>
-              </li>
-            </ul>
-          </div>
-          <div class="carousel_item carousel_item3">
-            <h3 class="item_title item_title_caro">今日午餐推荐：拿手私房菜，让你宴客倍儿有面子</h3>
-            <ul>
-              <li>
-                <a href="#" title="蚝油豆腐" class="img"><img src="https://s1.ig.meishij.net/p/20190705/72866541bc8cd6a4b1f1415d210baffd.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
+                <a href="#" title="蚝油豆腐" class="img">
+                  <img src="https://s1.ig.meishij.net/p/20190705/72866541bc8cd6a4b1f1415d210baffd.jpg?imageMogr2/gravity/Center/crop/330x330">
+                </a>
+                <div class="c">
                   <h2><a href="#" title="蚝油豆腐">蚝油豆腐</a></h2>
                   <strong>含钙量高，促进生长发育</strong>
                   <span><a href="#">健脑益智</a></span>
+                  <em></em>
                 </div>
               </li>
               <li>
-                <a href="#" title="浇汁鱼"  class="img"><img src="https://s1.ig.meishij.net/p/20190705/a53e9cb0656706cebe3792cae6c2d969.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
+                <a href="#" title="浇汁鱼" class="img"><img
+                    src="https://s1.ig.meishij.net/p/20190705/a53e9cb0656706cebe3792cae6c2d969.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
+                <div class="c">
                   <h2><a href="#" title="浇汁鱼">浇汁鱼</a></h2>
                   <strong>营养丰富，健脑补钙</strong>
                   <span><a href="#">补脑益智</a></span>
+                  <em></em>
                 </div>
               </li>
               <li>
-                <a href="#" title="低糖养胃饭"  class="img"><img src="https://s1.ig.meishij.net/p/20190705/4177f46c4820c64762815e5401b6c770.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
+                <a href="#" title="低糖养胃饭" class="img"><img
+                    src="https://s1.ig.meishij.net/p/20190705/4177f46c4820c64762815e5401b6c770.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
+                <div class="c">
                   <h2><a href="#" title="低糖养胃饭">低糖养胃饭</a></h2>
                   <strong>富含维B，养胃健脾</strong>
                   <span><a href="#">和中益肾</a></span>
+                  <em></em>
                 </div>
               </li>
             </ul>
           </div>
-          <div class="carousel_item carousel_item4">
-            <h3 class="item_title item_title_caro">今日下午茶推荐：今天来份奶香下午茶</h3>
-            <ul>
-              <li>
-                <a href="#" title="炸鲜奶" class="img"><img src="https://s1.ig.meishij.net/p/20190705/b94f823848b872b59dc95727ea2bd8e2.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
-                  <h2><a href="#" title="炸鲜奶">炸鲜奶</a></h2>
-                  <strong>富含优质蛋白，营养补钙</strong>
-                  <span><a href="#">补钙</a></span>
-                </div>
-              </li>
-              <li>
-                <a href="#" title="冰镇酸奶紫薯泥"  class="img"><img src="https://s1.ig.meishij.net/p/20190705/1f25a4d72f78bde865752edcdd0649d4.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
-                  <h2><a href="#" title="冰镇酸奶紫薯泥">冰镇酸奶紫薯泥</a></h2>
-                  <strong>富含花青素，美容养颜</strong>
-                  <span><a href="#">减肥美容</a></span>
-                </div>
-              </li>
-              <li>
-                <a href="#" title="日式牛奶卷"  class="img"><img src="https://s1.ig.meishij.net/p/20190705/a415bec0202ee2ee1f2db82c65fc904e.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
-                  <h2><a href="#" title="日式牛奶卷">日式牛奶卷</a></h2>
-                  <strong>富含碳水化合物，营养供能</strong>
-                  <span><a href="#">补充能量</a></span>
-                </div>
-              </li>
-            </ul>
-          </div>
-          <div class="carousel_item carousel_item5">
-            <h3 class="item_title item_title_caro">今日早餐推荐：家常早餐最美好</h3>
-            <ul>
-              <li>
-                <a href="#" title="美味蒸蛋饼" class="img"><img src="https://s1.ig.meishij.net/p/20190705/54652a7dc14d5a928549238c2368e9b1.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
-                  <h2><a href="#" title="美味蒸蛋饼">美味蒸蛋饼</a></h2>
-                  <strong>健康少油，补充维生素</strong>
-                  <span><a href="#">延年益寿</a></span>
-                </div>
-              </li>
-              <li>
-                <a href="#" title="蒜泥拌鸡蛋"  class="img"><img src="https://s1.ig.meishij.net/p/20190705/fc216b948b0f2664bb50c37bd8aebd58.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
-                  <h2><a href="#" title="蒜泥拌鸡蛋">蒜泥拌鸡蛋</a></h2>
-                  <strong>补充优质蛋白，提高记忆力</strong>
-                  <span><a href="#">健脑益智</a></span>
-                </div>
-              </li>
-              <li>
-                <a href="#" title="南瓜玉米汁"  class="img"><img src="https://s1.ig.meishij.net/p/20190705/a415bec0202ee2ee1f2db82c65fc904e.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
-                  <h2><a href="#" title="南瓜玉米汁">南瓜玉米汁</a></h2>
-                  <strong>保健效果好，多喝降三高</strong>
-                  <span><a href="#">防癌</a></span>
-                </div>
-              </li>
-            </ul>
-          </div>
-          <div class="carousel_item carousel_item1">
-            <h3 class="item_title item_title_caro">今日早餐推荐：家常早餐最美好</h3>
-            <ul>
-              <li>
-                <a href="#" title="美味蒸蛋饼" class="img"><img src="https://s1.ig.meishij.net/p/20190705/54652a7dc14d5a928549238c2368e9b1.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
-                  <h2><a href="#" title="美味蒸蛋饼">美味蒸蛋饼</a></h2>
-                  <strong>健康少油，补充维生素</strong>
-                  <span><a href="#">延年益寿</a></span>
-                </div>
-              </li>
-              <li>
-                <a href="#" title="蒜泥拌鸡蛋"  class="img"><img src="https://s1.ig.meishij.net/p/20190705/fc216b948b0f2664bb50c37bd8aebd58.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
-                  <h2><a href="#" title="蒜泥拌鸡蛋">蒜泥拌鸡蛋</a></h2>
-                  <strong>补充优质蛋白，提高记忆力</strong>
-                  <span><a href="#">健脑益智</a></span>
-                </div>
-              </li>
-              <li>
-                <a href="#" title="南瓜玉米汁"  class="img"><img src="https://s1.ig.meishij.net/p/20190705/a415bec0202ee2ee1f2db82c65fc904e.jpg?imageMogr2/gravity/Center/crop/330x330"></a>
-                <div class="cintr">
-                  <h2><a href="#" title="南瓜玉米汁">南瓜玉米汁</a></h2>
-                  <strong>保健效果好，多喝降三高</strong>
-                  <span><a href="#">防癌</a></span>
-                </div>
-              </li>
-            </ul>
-          </div>
-          <div class="maskleft"></div>
-          <div class="maskright"></div>
         </div>
       </div>
       <!-- 2F食材 -->
