--- a/HTML/header.html
+++ b/HTML/header.html
@@ -9,6 +9,8 @@
   <!-- <link rel="stylesheet" href="../CSS/normalize.css"> -->
   <link rel="stylesheet" href="../CSS/header.css">
   <link rel="stylesheet" href="../CSS/base.css">
+  <script src="../JS/jquery-1.11.3.js"></script>
+  <script src="../JS/header.js"></script>
 </head>
 <body>
   <div class="header">
@@ -29,15 +31,11 @@
   <div class="nav">
     <ul class="nav_main">
       <li class="current"><a class="link" href="#"><strong>首页</strong></a></li>
-      <li class="extend"><a class="link" href="#"><strong>菜谱大全</strong></a></li>
       <li class="extend">
-        <a class="link" href="#">
-          <strong>饮食健康</strong>
-        </a>
-        <!--
-        <div class="content">
-          <div>
-            <div>
+        <a class="link" href="#"><strong>菜谱大全</strong></a>
+        <div class="cook">
+          <div class="cookb extend_cpdq">
+            <div class="cook_item">
               <dl>
                 <dt><a href="#">家常菜谱</a></dt>
                 <dd><a href="#">家常菜</a></dd>
@@ -56,8 +54,127 @@
                 <dd><a href="#">微波炉</a></dd>
               </dl>
             </div>
+            <div class="cook_item cook_sitem">
+              <dl>
+                <dt><a href="#">中华菜系</a></dt>
+                <dd><a href="#">川菜</a></dd>
+                <dd><a href="#">湘菜</a></dd>
+                <dd><a href="#">鲁菜</a></dd>
+                <dd><a href="#">东北菜</a></dd>
+                <dd><a href="#">浙菜</a></dd>
+                <dd><a href="#">湖北菜</a></dd>
+              </dl>
+            </div>
+            <div class="cook_item cook_sitem">
+              <dl>
+                <dt><a href="#">各地小吃</a></dt>
+                <dd><a href="#">广东小吃</a></dd>
+                <dd><a href="#">北京小吃</a></dd>
+                <dd><a href="#">陕西小吃</a></dd>
+                <dd><a href="#">四川小吃</a></dd>
+              </dl>
+            </div>
+            <div class="cook_item cook_sitem">
+              <dl>
+                <dt><a href="#">烘焙</a></dt>
+                <dd><a href="#">蛋糕面包</a></dd>
+                <dd><a href="#">甜品点心</a></dd>
+                <dd><a href="#">饼干配方</a></dd>
+              </dl>
+            </div>
+            <div class="cook_item cook_sitem">
+              <dl>
+                <dt><a href="#">外国菜谱</a></dt>
+                <dd><a href="#">韩国料理</a></dd>
+                <dd><a href="#">日本料理</a></dd>
+                <dd><a href="#">法国菜</a></dd>
+                <dd><a href="#">意大利餐</a></dd>
+              </dl>
+            </div>
+            <div class="cook_item cook_sitem">
+              <dl>
+                <dt><a href="#">厨房百科</a></dt>
+                <dd><a href="#">摆盘围边</a></dd>
+                <dd><a href="#">烹饪技巧</a></dd>
+                <dd><a href="#">生活妙招</a></dd>
+                <dd><a href="#">美食专题</a></dd>
+              </dl>
+            </div>
+            <div class="cook_item cook_sitem">
+              <dl>
+                <dt><a href="#">食材百科</a></dt>
+                <dd><a href="#">蔬菜</a></dd>
+                <dd><a href="#">水果</a></dd>
+                <dd><a href="#">谷物</a></dd>
+              </dl>
+            </div>
+            <div class="bgitem"></div>
           </div>
-        </div> -->
+        </div>
+      </li>
+      <li class="extend">
+        <a class="link" href="#">
+          <strong>饮食健康</strong>
+        </a>
+        <div class="cook">
+          <div class="cookb extend_ysjk">
+            <div class="cook_item">
+              <dl>
+                <dt><a href="#">饮食小常识</a></dt>
+                <dd><a href="#">美容瘦身</a></dd>
+                <dd><a href="#">食品安全</a></dd>
+                <dd><a href="#">养生妙方</a></dd>
+                <dd><a href="#">饮食禁忌</a></dd>
+                <dd><a href="#">中医保健</a></dd>
+                <dd><a href="#">母婴健康饮食</a></dd>
+                <dd><a href="#">饮食新闻</a></dd>
+              </dl>
+            </div>
+            <div class="cook_item">
+              <dl>
+                <dt><a href="#">功能性调理</a></dt>
+                <dd><a href="#">清热去火</a></dd>
+                <dd><a href="#">减肥</a></dd>
+                <dd><a href="#">乌发</a></dd>
+                <dd><a href="#">清热解毒</a></dd>
+                <dd><a href="#">消化不良</a></dd>
+                <dd><a href="#">健脾开胃</a></dd>
+                <dd><a href="#">增肥</a></dd>
+              </dl>
+            </div>
+            <div class="cook_item cook_sitem">
+              <dl>
+                <dt><a href="#">脏腑调理</a></dt>
+                <dd><a href="#">感冒</a></dd>
+                <dd><a href="#">补血</a></dd>
+                <dd><a href="#">腹泻</a></dd>
+                <dd><a href="#">活血化瘀</a></dd>
+              </dl>
+            </div>
+            <div class="cook_item cook_sitem">
+              <dl>
+                <dt><a href="#">人群膳食</a></dt>
+                <dd><a href="#">孕妇</a></dd>
+                <dd><a href="#">老人</a></dd>
+                <dd><a href="#">青少年</a></dd>
+                <dd><a href="#">哺乳期</a></dd>
+                <dd><a href="#">幼儿</a></dd>
+              </dl>
+            </div>
+            <div class="cook_item cook_sitem">
+              <dl>
+                <dt><a href="#">疾病调理</a></dt>
+                <dd><a href="#">糖尿病</a></dd>
+                <dd><a href="#">高血压</a></dd>
+                <dd><a href="#">痛风</a></dd>
+                <dd><a href="#">胃炎</a></dd>
+                <dd><a href="#">更年期</a></dd>
+                <dd><a href="#">甲状腺</a></dd>
+              </dl>
+            </div>
+            <div class="bgitem"></div>
+          </div>
+        </div>
       </li>
       <li><a class="link" href="#"><strong>美食菜单</strong></a></li>
       <li><a class="link" href="#"><strong>家居馆</strong></a></li>
