--- a/HTML/chufang.html
+++ b/HTML/chufang.html
@@ -80,16 +80,75 @@
       <div class="liststyle">
         <div class="filterlist">
           <ul class="tab">
-            <li class="li1">
+            <li class="li1 current">
               <a href="javascript:;">普通筛选</a>
             </li>
-            <li class="li2 current">
+            <li class="li2">
               <a href="javascript:;">食材筛选</a>
               <span class="new_function"></span>
             </li>
           </ul>
+          <div class="tabcon">
+            <dl>
+              <dt>选择难度</dt>
+              <dd>
+                <a href="javascript:;">新手尝试</a>
+                <a href="javascript:;">初级尝试</a>
+                <a href="javascript:;">初级水平</a>
+                <a href="javascript:;">中级掌勺</a>
+                <a href="javascript:;">高级厨师</a>
+                <a href="javascript:;">厨神级</a>
+              </dd>
+            </dl>
+            <dl>
+              <dt>选择工艺</dt>
+              <dd>
+                <a href="javascript:;">炒</a>
+                <a href="javascript:;">蒸</a>
+                <a href="javascript:;">煮</a>
+                <a href="javascript:;">炖</a>
+                <a href="javascript:;">拌</a>
+                <a href="javascript:;">烧</a>
+                <a href="javascript:;">煎</a>
+                <a href="javascript:;">炸</a>
+                <a href="javascript:;">烘焙</a>
+                <a href="javascript:;">微波</a>
+              </dd>
+              <dd class="long">展开全部 >></dd>
+            </dl>
+            <dl>
+              <dt>选择口味</dt>
+              <dd>
+                <a href="javascript:;">家常味</a>
+                <a href="javascript:;">香辣味</a>
+                <a href="javascript:;">咸鲜味</a>
+                <a href="javascript:;">甜味</a>
+                <a href="javascript:;">酸甜味</a>
+                <a href="javascript:;">酸辣味</a>
+                <a href="javascript:;">麻辣味</a>
+                <a href="javascript:;">酱香味</a>
+                <a href="javascript:;">奶香味</a>
+                <a href="javascript:;">蒜香味</a>
+              </dd>
+              <dd class="long">展开全部 >></dd>
+            </dl>
+            <dl>
+              <dt>选择时间</dt>
+              <dd>
+                <a href="javascript:;">&lt;5分钟</a>
+                <a href="javascript:;">&lt;10分钟</a>
+                <a href="javascript:;">&lt;15分钟</a>
+                <a href="javascript:;">&lt;30分钟</a>
+                <a href="javascript:;">&lt;60分钟</a>
+                <a href="javascript:;">&lt;90分钟</a>
+                <a href="javascript:;">&lt;2小时</a>
+                <a href="javascript:;">&lt;数小时</a>
+                <a href="javascript:;">&lt;一天</a>
+                <a href="javascript:;">&lt;数天</a>
+              </dd>
+            </dl>
+          </div>
         </div>
-        <div class="liststyle_con"></div>
       </div>
     </div>
   </div>
