新增了content.html页面

--- a/HTML/chufang.html
+++ b/HTML/chufang.html
@@ -79,6 +79,7 @@
         </span>
       </div>
       <div class="liststyle">
+        <!-- 左侧筛选区 -->
         <div class="filterlist" id="filterlist">
           <ul class="tab">
             <li class="li1" po="1">
@@ -155,16 +156,393 @@
                 <input type="text" class="text" placeholder="请输入您想查找的食材">
                 <input type="button" class="submit">
               </div>
-              <dl class="on">
-                <dt>按数量排序</dt>
-                <dd class="row2">
-                  <a href="javascript:;">
-                    <span class="season">应季</span>
-                    <strong>黄瓜</strong>
-                    <em>1709</em>
-                  </a>
-                </dd>
-              </dl>
+            </div>
+            <dl class="on">
+              <dt>按数量排序</dt>
+              <dd class="row2">
+                <a href="javascript:;">
+                  <span class="season">应季</span>
+                  <strong>黄瓜</strong>
+                  <em>1709</em>
+                </a>
+                <a href="javascript:;">
+                  <span class="season">应季</span>
+                  <strong>牛肉</strong>
+                  <em>1206</em>
+                </a>
+                <a href="javascript:;">
+                  <span class="season">应季</span>
+                  <strong>虾</strong>
+                  <em>1206</em>
+                </a>
+                <a href="javascript:;">
+                  <span class="season">应季</span>
+                  <strong>南瓜</strong>
+                  <em>1121</em>
+                </a>
+                <a href="javascript:;">
+                  <span class="season">应季</span>
+                  <strong>土豆</strong>
+                  <em>1031</em>
+                </a>
+                <a href="javascript:;">
+                  <span class="season">应季</span>
+                  <strong>鸡腿</strong>
+                  <em>987</em>
+                </a>
+                <a href="javascript:;">
+                  <span class="season">应季</span>
+                  <strong>西红柿</strong>
+                  <em>864</em>
+                </a>
+                <a href="javascript:;">
+                  <span class="season">应季</span>
+                  <strong>藕</strong>
+                  <em>649</em>
+                </a>
+                <a href="javascript:;">
+                  <span class="season">应季</span>
+                  <strong>白萝卜</strong>
+                  <em>648</em>
+                </a>
+                <a href="javascript:;">
+                  <span class="season">应季</span>
+                  <strong>冬瓜</strong>
+                  <em>603</em>
+                </a>
+              </dd>
+              <dd class="long">展开全部 >></dd>
+            </dl>
+          </div>
+        </div>
+        <!-- 主要菜谱区 -->
+        <div class="listyle">
+          <div class="listyle1_list">
+            <!-- 图1 -->
+            <div class="listyle1">
+              <a href="#" title="小米山药粥" class="big">
+                <img class="img" alt="小米山药粥" src="https://s1.st.meishij.net/r/206/231/5120456/a5120456_148076132206435.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>小米山药粥</strong>
+                      <span>26 评论 2769 人气</span>
+                      <em>elsa飞雪</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">6步 / 大概30分钟</li>
+                        <li class="li2">煮 / 家常味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- 图2 -->
+            <div class="listyle1">
+              <a href="#" title="奥尔良烧烤味肉饼" class="big">
+                <img class="img" alt="奥尔良烧烤味肉饼" src="https://s1.st.meishij.net/r/184/180/4420184/a4420184_156272768313812.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>奥尔良烧烤味肉饼</strong>
+                      <span>25评论 446 人气</span>
+                      <em>寓言</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">5步 / 大概15分钟</li>
+                        <li class="li2">烙 / 其他口味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- 图3 -->
+            <div class="listyle1">
+              <a href="#" title="红豆薏米甜酒酿" class="big">
+                <img class="img" alt="红豆薏米甜酒酿" src="https://s1.st.meishij.net/r/155/60/5140155/a5140155_156207913612379.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>红豆薏米甜酒酿</strong>
+                      <span>4 评论 292 人气</span>
+                      <em>跳舞的苹果</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">6步 / 大概2小时</li>
+                        <li class="li2">煮 / 甜味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- 图4 -->
+            <div class="listyle1">
+              <a href="#" title="牛油果香蕉思慕雪" class="big">
+                <img class="img" alt="牛油果香蕉思慕雪" src="https://s1.st.meishij.net/r/155/60/5140155/a5140155_155196688335045.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>牛油果香蕉思慕雪</strong>
+                      <span>4 评论 242 人气</span>
+                      <em>脂肪肝</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">8步 / 大概10分钟</li>
+                        <li class="li2">其它工艺 / 甜味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- 图5 -->
+            <div class="listyle1">
+              <a href="#" title="香肠飞饼卷" class="big">
+                <img class="img" alt="香肠飞饼卷" src="https://s1.st.meishij.net/r/155/60/5140155/a5140155_155196394270704.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>香肠飞饼卷</strong>
+                      <span>8 评论 339 人气</span>
+                      <em>归家小厨</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">9步 / 大概30分钟</li>
+                        <li class="li2">烤 / 咸鲜味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- 图6 -->
+            <div class="listyle1">
+              <a href="#" title="驴打滚" class="big">
+                <img class="img" alt="驴打滚" src="https://s1.st.meishij.net/r/136/141/13410386/a13410386_155196477266046.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>驴打滚</strong>
+                      <span>5 评论 304 人气</span>
+                      <em>小马美食厨房</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">10步 / 大概30分钟</li>
+                        <li class="li2">煮 / 咸鲜味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- 图7 -->
+            <div class="listyle1">
+              <a href="#" title="花开富贵香肠菇" class="big">
+                <img class="img" alt="花开富贵香肠菇" src="https://s1.st.meishij.net/r/86/221/430336/a430336_155194389396290.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>花开富贵香肠菇</strong>
+                      <span>30 评论 299 人气</span>
+                      <em>Smile湘雨</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">16步 / 大概15分钟</li>
+                        <li class="li2">蒸 / 咸鲜味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- 图8 -->
+            <div class="listyle1">
+              <a href="#" title="牛油果香蕉思慕雪" class="big">
+                <img class="img" alt="牛油果香蕉思慕雪" src="https://s1.st.meishij.net/r/155/60/5140155/a5140155_155196688335045.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>牛油果香蕉思慕雪</strong>
+                      <span>4 评论 242 人气</span>
+                      <em>脂肪肝</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">8步 / 大概10分钟</li>
+                        <li class="li2">其它工艺 / 甜味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- 图9 -->
+            <div class="listyle1">
+              <a href="#" title="香肠飞饼卷" class="big">
+                <img class="img" alt="香肠飞饼卷" src="https://s1.st.meishij.net/r/155/60/5140155/a5140155_155196394270704.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>香肠飞饼卷</strong>
+                      <span>8 评论 339 人气</span>
+                      <em>归家小厨</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">9步 / 大概30分钟</li>
+                        <li class="li2">烤 / 咸鲜味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- 图10 -->
+            <div class="listyle1">
+              <a href="#" title="驴打滚" class="big">
+                <img class="img" alt="驴打滚" src="https://s1.st.meishij.net/r/136/141/13410386/a13410386_155196477266046.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>驴打滚</strong>
+                      <span>5 评论 304 人气</span>
+                      <em>小马美食厨房</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">10步 / 大概30分钟</li>
+                        <li class="li2">煮 / 咸鲜味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- 图11 -->
+            <div class="listyle1">
+              <a href="#" title="花开富贵香肠菇" class="big">
+                <img class="img" alt="花开富贵香肠菇" src="https://s1.st.meishij.net/r/86/221/430336/a430336_155194389396290.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>花开富贵香肠菇</strong>
+                      <span>30 评论 299 人气</span>
+                      <em>Smile湘雨</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">16步 / 大概15分钟</li>
+                        <li class="li2">蒸 / 咸鲜味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- 图12 -->
+            <div class="listyle1">
+              <a href="#" title="牛油果香蕉思慕雪" class="big">
+                <img class="img" alt="牛油果香蕉思慕雪" src="https://s1.st.meishij.net/r/155/60/5140155/a5140155_155196688335045.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>牛油果香蕉思慕雪</strong>
+                      <span>4 评论 242 人气</span>
+                      <em>脂肪肝</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">8步 / 大概10分钟</li>
+                        <li class="li2">其它工艺 / 甜味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- 图13 -->
+            <div class="listyle1">
+              <a href="#" title="香肠飞饼卷" class="big">
+                <img class="img" alt="香肠飞饼卷" src="https://s1.st.meishij.net/r/155/60/5140155/a5140155_155196394270704.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>香肠飞饼卷</strong>
+                      <span>8 评论 339 人气</span>
+                      <em>归家小厨</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">9步 / 大概30分钟</li>
+                        <li class="li2">烤 / 咸鲜味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- 图14 -->
+            <div class="listyle1">
+              <a href="#" title="驴打滚" class="big">
+                <img class="img" alt="驴打滚" src="https://s1.st.meishij.net/r/136/141/13410386/a13410386_155196477266046.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>驴打滚</strong>
+                      <span>5 评论 304 人气</span>
+                      <em>小马美食厨房</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">10步 / 大概30分钟</li>
+                        <li class="li2">煮 / 咸鲜味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- 图15 -->
+            <div class="listyle1">
+              <a href="#" title="花开富贵香肠菇" class="big">
+                <img class="img" alt="花开富贵香肠菇" src="https://s1.st.meishij.net/r/86/221/430336/a430336_155194389396290.jpg">
+                <div class="i_w">
+                  <div class="i">
+                    <div class="c1">
+                      <strong>花开富贵香肠菇</strong>
+                      <span>30 评论 299 人气</span>
+                      <em>Smile湘雨</em>
+                    </div>
+                    <div class="c2">
+                      <ul>
+                        <li class="li1">16步 / 大概15分钟</li>
+                        <li class="li2">蒸 / 咸鲜味</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="listyle1_page">
+            <div class="listyle1_page_con">
+              <a href="javascript:;" class="current">1</a>
+              <a href="javascript:;">2</a>
+              <a href="javascript:;">3</a>
+              <a href="javascript:;">4</a>
+              <a href="javascript:;">5</a>
+              <span>...</span>
+              <a href="javascript:;" class="next">下一页</a>
             </div>
           </div>
         </div>
