--- a/HTML/content.html
+++ b/HTML/content.html
@@ -5,7 +5,7 @@
   </meta>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1">
-  <title>美食汇</title>
+  <title>美食杰</title>
   <!-- <link rel="stylesheet" href="../CSS/normalize.css"> -->
   <link rel="stylesheet" href="../CSS/content.css">
   <link rel="stylesheet" href="../CSS/index.css">
