--- a/HTML/index.html
+++ b/HTML/index.html
@@ -349,7 +349,7 @@
                 <div class="listyle1_list">
                   <!-- 图1 -->
                   <div class="listyle1 ml-0">
-                    <a href="#" title="蜜汁鸡翅" class="big">
+                    <a href="http://127.0.0.1:5501/HTML/content.html" title="蜜汁鸡翅" class="big">
                       <img class="img" alt="蜜汁鸡翅" src="https://s1.st.meishij.net/r/155/60/5140155/a5140155_155196470921235.jpg">
                       <div class="i_w">
                         <div class="i">
@@ -512,7 +512,7 @@
                         <li><a href="#">粤菜</a></li>
                         <li><a href="#">湘菜</a></li>
                         <li><a href="#">甜点</a></li>
-                        <li><a class="hot" href="#">进入菜谱大全 >></a></li>
+                        <li><a class="hot" href="http://127.0.0.1:5501/HTML/chufang.html">进入菜谱大全 >></a></li>
                       </ul>
                     </div>
                   </div>
@@ -527,7 +527,7 @@
             <a class="l_n l_n_1 current" po="1" href="#">一小时</a>
             <a class="l_n l_n_2" po="2" href="#">今日</a>
             <a class="l_n l_n_4" po="4" href="#">七天</a>
-            <a href="#">更多菜谱 ></a>
+            <a href="http://127.0.0.1:5501/HTML/chufang.html">更多菜谱 ></a>
           </span>
         </div>
       </div>
