--- a/HTML/content.html
+++ b/HTML/content.html
@@ -19,7 +19,7 @@
     <div class="main">
       <!-- 路径 -->
       <ul class="pathstyle">
-        <li><a href="javascript:;">首页</a></li>
+        <li><a href="http://127.0.0.1:5501/HTML/index.html">首页</a></li>
         <li> > </li>
         <li><a href="javascript:;">菜谱大全</a></li>
         <li> > </li>
