--- a/HTML/header.html
+++ b/HTML/header.html
@@ -15,97 +15,97 @@
 <body>
   <div class="header">
     <div class="header_m">
-      <div><a class="logo_top" href="#"></a></div>
+      <div><a class="logo_top" href="http://127.0.0.1:5501/HTML/index.html"></a></div>
       <div class="top_search">
         <input class="text" type="text" placeholder="请输入菜谱/食材/菜单/作者">
         <input class="search" type="submit" value="搜 索">
       </div>
       <div class="login_item">
-        <a class="link" href="#">登录</a>
-        <a class="link" href="#">注册</a>
-        <a class="link wb_login" href="#">微博登录</a>
-        <a class="link qq_login" href="#">QQ登录</a>
+        <a class="link" href="http://127.0.0.1:5501/HTML/login.html">登录</a>
+        <a class="link" href="javascript:;">注册</a>
+        <a class="link wb_login" href="javascript:;">微博登录</a>
+        <a class="link qq_login" href="javascript:;">QQ登录</a>
       </div>
     </div>
   </div>
   <div class="nav">
     <ul class="nav_main">
-      <li class="current"><a class="link" href="#"><strong>首页</strong></a></li>
+      <li class="current"><a class="link" href="http://127.0.0.1:5501/HTML/index.html"><strong>首页</strong></a></li>
       <li class="extend">
-        <a class="link" href="#"><strong>菜谱大全</strong></a>
+        <a class="link" href="http://127.0.0.1:5501/HTML/chufang.html"><strong>菜谱大全</strong></a>
         <div class="cook">
           <div class="cookb extend_cpdq">
             <div class="cook_item">
               <dl>
-                <dt><a href="#">家常菜谱</a></dt>
-                <dd><a href="#">家常菜</a></dd>
-                <dd><a href="#">凉菜</a></dd>
-                <dd><a href="#">素食</a></dd>
-                <dd><a href="#">晚餐</a></dd>
-                <dd><a href="#">热菜</a></dd>
-                <dd><a href="#">海鲜</a></dd>
-                <dd><a href="#">孕妇</a></dd>
-                <dd><a href="#">早餐</a></dd>
-                <dd><a href="#">午餐</a></dd>
-                <dd><a href="#">甜品点心</a></dd>
-                <dd><a href="#">汤粥</a></dd>
-                <dd><a href="#">宝宝食谱-婴儿食谱</a></dd>
-                <dd><a href="#">糕点主食</a></dd>
-                <dd><a href="#">微波炉</a></dd>
+                <dt><a href="http://127.0.0.1:5501/HTML/chufang.html">家常菜谱</a></dt>
+                <dd><a href="http://127.0.0.1:5501/HTML/chufang.html">家常菜</a></dd>
+                <dd><a href="javascript:;">凉菜</a></dd>
+                <dd><a href="javascript:;">素食</a></dd>
+                <dd><a href="javascript:;">晚餐</a></dd>
+                <dd><a href="javascript:;">热菜</a></dd>
+                <dd><a href="javascript:;">海鲜</a></dd>
+                <dd><a href="javascript:;">孕妇</a></dd>
+                <dd><a href="javascript:;">早餐</a></dd>
+                <dd><a href="javascript:;">午餐</a></dd>
+                <dd><a href="javascript:;">甜品点心</a></dd>
+                <dd><a href="javascript:;">汤粥</a></dd>
+                <dd><a href="javascript:;">宝宝食谱-婴儿食谱</a></dd>
+                <dd><a href="javascript:;">糕点主食</a></dd>
+                <dd><a href="javascript:;">微波炉</a></dd>
               </dl>
             </div>
             <div class="cook_item cook_sitem">
               <dl>
-                <dt><a href="#">中华菜系</a></dt>
-                <dd><a href="#">川菜</a></dd>
-                <dd><a href="#">湘菜</a></dd>
-                <dd><a href="#">鲁菜</a></dd>
-                <dd><a href="#">东北菜</a></dd>
-                <dd><a href="#">浙菜</a></dd>
-                <dd><a href="#">湖北菜</a></dd>
+                <dt><a href="javascript:;">中华菜系</a></dt>
+                <dd><a href="javascript:;">川菜</a></dd>
+                <dd><a href="javascript:;">湘菜</a></dd>
+                <dd><a href="javascript:;">鲁菜</a></dd>
+                <dd><a href="javascript:;">东北菜</a></dd>
+                <dd><a href="javascript:;">浙菜</a></dd>
+                <dd><a href="javascript:;">湖北菜</a></dd>
               </dl>
             </div>
             <div class="cook_item cook_sitem">
               <dl>
-                <dt><a href="#">各地小吃</a></dt>
-                <dd><a href="#">广东小吃</a></dd>
-                <dd><a href="#">北京小吃</a></dd>
-                <dd><a href="#">陕西小吃</a></dd>
-                <dd><a href="#">四川小吃</a></dd>
+                <dt><a href="javascript:;">各地小吃</a></dt>
+                <dd><a href="javascript:;">广东小吃</a></dd>
+                <dd><a href="javascript:;">北京小吃</a></dd>
+                <dd><a href="javascript:;">陕西小吃</a></dd>
+                <dd><a href="javascript:;">四川小吃</a></dd>
               </dl>
             </div>
             <div class="cook_item cook_sitem">
               <dl>
-                <dt><a href="#">烘焙</a></dt>
-                <dd><a href="#">蛋糕面包</a></dd>
-                <dd><a href="#">甜品点心</a></dd>
-                <dd><a href="#">饼干配方</a></dd>
+                <dt><a href="javascript:;">烘焙</a></dt>
+                <dd><a href="javascript:;">蛋糕面包</a></dd>
+                <dd><a href="javascript:;">甜品点心</a></dd>
+                <dd><a href="javascript:;">饼干配方</a></dd>
               </dl>
             </div>
             <div class="cook_item cook_sitem">
               <dl>
-                <dt><a href="#">外国菜谱</a></dt>
-                <dd><a href="#">韩国料理</a></dd>
-                <dd><a href="#">日本料理</a></dd>
-                <dd><a href="#">法国菜</a></dd>
-                <dd><a href="#">意大利餐</a></dd>
+                <dt><a href="javascript:;">外国菜谱</a></dt>
+                <dd><a href="javascript:;">韩国料理</a></dd>
+                <dd><a href="javascript:;">日本料理</a></dd>
+                <dd><a href="javascript:;">法国菜</a></dd>
+                <dd><a href="javascript:;">意大利餐</a></dd>
               </dl>
             </div>
             <div class="cook_item cook_sitem">
               <dl>
-                <dt><a href="#">厨房百科</a></dt>
-                <dd><a href="#">摆盘围边</a></dd>
-                <dd><a href="#">烹饪技巧</a></dd>
-                <dd><a href="#">生活妙招</a></dd>
-                <dd><a href="#">美食专题</a></dd>
+                <dt><a href="javascript:;">厨房百科</a></dt>
+                <dd><a href="javascript:;">摆盘围边</a></dd>
+                <dd><a href="javascript:;">烹饪技巧</a></dd>
+                <dd><a href="javascript:;">生活妙招</a></dd>
+                <dd><a href="javascript:;">美食专题</a></dd>
               </dl>
             </div>
             <div class="cook_item cook_sitem">
               <dl>
-                <dt><a href="#">食材百科</a></dt>
-                <dd><a href="#">蔬菜</a></dd>
-                <dd><a href="#">水果</a></dd>
-                <dd><a href="#">谷物</a></dd>
+                <dt><a href="javascript:;">食材百科</a></dt>
+                <dd><a href="javascript:;">蔬菜</a></dd>
+                <dd><a href="javascript:;">水果</a></dd>
+                <dd><a href="javascript:;">谷物</a></dd>
               </dl>
             </div>
             <div class="bgitem"></div>
@@ -113,74 +113,74 @@
         </div>
       </li>
       <li class="extend">
-        <a class="link" href="#">
+        <a class="link" href="javascript:;">
           <strong>饮食健康</strong>
         </a>
         <div class="cook">
           <div class="cookb extend_ysjk">
             <div class="cook_item">
               <dl>
-                <dt><a href="#">饮食小常识</a></dt>
-                <dd><a href="#">美容瘦身</a></dd>
-                <dd><a href="#">食品安全</a></dd>
-                <dd><a href="#">养生妙方</a></dd>
-                <dd><a href="#">饮食禁忌</a></dd>
-                <dd><a href="#">中医保健</a></dd>
-                <dd><a href="#">母婴健康饮食</a></dd>
-                <dd><a href="#">饮食新闻</a></dd>
+                <dt><a href="javascript:;">饮食小常识</a></dt>
+                <dd><a href="javascript:;">美容瘦身</a></dd>
+                <dd><a href="javascript:;">食品安全</a></dd>
+                <dd><a href="javascript:;">养生妙方</a></dd>
+                <dd><a href="javascript:;">饮食禁忌</a></dd>
+                <dd><a href="javascript:;">中医保健</a></dd>
+                <dd><a href="javascript:;">母婴健康饮食</a></dd>
+                <dd><a href="javascript:;">饮食新闻</a></dd>
               </dl>
             </div>
             <div class="cook_item">
               <dl>
-                <dt><a href="#">功能性调理</a></dt>
-                <dd><a href="#">清热去火</a></dd>
-                <dd><a href="#">减肥</a></dd>
-                <dd><a href="#">乌发</a></dd>
-                <dd><a href="#">清热解毒</a></dd>
-                <dd><a href="#">消化不良</a></dd>
-                <dd><a href="#">健脾开胃</a></dd>
-                <dd><a href="#">增肥</a></dd>
+                <dt><a href="javascript:;">功能性调理</a></dt>
+                <dd><a href="javascript:;">清热去火</a></dd>
+                <dd><a href="javascript:;">减肥</a></dd>
+                <dd><a href="javascript:;">乌发</a></dd>
+                <dd><a href="javascript:;">清热解毒</a></dd>
+                <dd><a href="javascript:;">消化不良</a></dd>
+                <dd><a href="javascript:;">健脾开胃</a></dd>
+                <dd><a href="javascript:;">增肥</a></dd>
               </dl>
             </div>
             <div class="cook_item cook_sitem">
               <dl>
-                <dt><a href="#">脏腑调理</a></dt>
-                <dd><a href="#">感冒</a></dd>
-                <dd><a href="#">补血</a></dd>
-                <dd><a href="#">腹泻</a></dd>
-                <dd><a href="#">活血化瘀</a></dd>
+                <dt><a href="javascript:;">脏腑调理</a></dt>
+                <dd><a href="javascript:;">感冒</a></dd>
+                <dd><a href="javascript:;">补血</a></dd>
+                <dd><a href="javascript:;">腹泻</a></dd>
+                <dd><a href="javascript:;">活血化瘀</a></dd>
               </dl>
             </div>
             <div class="cook_item cook_sitem">
               <dl>
-                <dt><a href="#">人群膳食</a></dt>
-                <dd><a href="#">孕妇</a></dd>
-                <dd><a href="#">老人</a></dd>
-                <dd><a href="#">青少年</a></dd>
-                <dd><a href="#">哺乳期</a></dd>
-                <dd><a href="#">幼儿</a></dd>
+                <dt><a href="javascript:;">人群膳食</a></dt>
+                <dd><a href="javascript:;">孕妇</a></dd>
+                <dd><a href="javascript:;">老人</a></dd>
+                <dd><a href="javascript:;">青少年</a></dd>
+                <dd><a href="javascript:;">哺乳期</a></dd>
+                <dd><a href="javascript:;">幼儿</a></dd>
               </dl>
             </div>
             <div class="cook_item cook_sitem">
               <dl>
-                <dt><a href="#">疾病调理</a></dt>
-                <dd><a href="#">糖尿病</a></dd>
-                <dd><a href="#">高血压</a></dd>
-                <dd><a href="#">痛风</a></dd>
-                <dd><a href="#">胃炎</a></dd>
-                <dd><a href="#">更年期</a></dd>
-                <dd><a href="#">甲状腺</a></dd>
+                <dt><a href="javascript:;">疾病调理</a></dt>
+                <dd><a href="javascript:;">糖尿病</a></dd>
+                <dd><a href="javascript:;">高血压</a></dd>
+                <dd><a href="javascript:;">痛风</a></dd>
+                <dd><a href="javascript:;">胃炎</a></dd>
+                <dd><a href="javascript:;">更年期</a></dd>
+                <dd><a href="javascript:;">甲状腺</a></dd>
               </dl>
             </div>
             <div class="bgitem"></div>
           </div>
         </div>
       </li>
-      <li><a class="link" href="#"><strong>美食菜单</strong></a></li>
-      <li><a class="link" href="#"><strong>家居馆</strong></a></li>
-      <li><a class="link" href="#"><strong>美食达人<img class="crown" src="https://s1.st.meishij.net/p2/20160909/20160909164810_443.png"></strong></a></li>
-      <li><a class="link" href="#"><strong>菜谱视频</strong></a></li>
-      <li><a class="link" href="#"><strong>产品下载</strong></a></li>
+      <li><a class="link" href="javascript:;"><strong>美食菜单</strong></a></li>
+      <li><a class="link" href="javascript:;"><strong>家居馆</strong></a></li>
+      <li><a class="link" href="javascript:;"><strong>美食达人<img class="crown" src="https://s1.st.meishij.net/p2/20160909/20160909164810_443.png"></strong></a></li>
+      <li><a class="link" href="javascript:;"><strong>菜谱视频</strong></a></li>
+      <li><a class="link" href="javascript:;"><strong>产品下载</strong></a></li>
     </ul>
   </div>
 </body>
